@startuml ERD_RubyBooks

!theme plain
hide circle
skinparam linetype ortho

entity "users" {
  * id : INT <<PK>>
  --
  * name : VARCHAR
  * email : VARCHAR <<Unique>>
  * password : VARCHAR
  * role : ENUM
  * status : ENUM
  avatar : VARCHAR
  phone : VARCHAR
  dob : DATE
  alternate_phone : VARCHAR
  delete_requested : TINYINT
  created_at : TIMESTAMP
}

entity "seller_verifications" {
  * id : INT <<PK>>
  --
  * seller_id : INT <<FK>>
  * status : ENUM
  approved_by : INT <<FK>>
  approved_at : TIMESTAMP
}

entity "categories" {
  * id : INT <<PK>>
  --
  * name : VARCHAR
  description : TEXT
}

entity "products" {
  * id : INT <<PK>>
  --
  * seller_id : INT <<FK>>
  * category_id : INT <<FK>>
  * name : VARCHAR
  description : TEXT
  * price : INT
  * stock : INT
  * book_condition : ENUM
  image : VARCHAR
  * status : ENUM
  created_at : TIMESTAMP
}

entity "wishlists" {
  * id : INT <<PK>>
  --
  * buyer_id : INT <<FK>>
  * product_id : INT <<FK>>
  created_at : TIMESTAMP
}

entity "carts" {
  * id : INT <<PK>>
  --
  * buyer_id : INT <<FK>>
  * product_id : INT <<FK>>
  * qty : INT
}

entity "shipping_addresses" {
  * id : INT <<PK>>
  --
  * buyer_id : INT <<FK>>
  * recipient_name : VARCHAR
  * phone : VARCHAR
  * address : TEXT
  * city : VARCHAR
  * postal_code : VARCHAR
}

entity "orders" {
  * id : INT <<PK>>
  --
  * buyer_id : INT <<FK>>
  shipping_address_id : INT <<FK>>
  * invoice_number : VARCHAR <<Unique>>
  * total : INT
  * shipping_cost : INT
  receipt_number : VARCHAR
  * status : ENUM
  created_at : TIMESTAMP
}

entity "order_items" {
  * id : INT <<PK>>
  --
  * order_id : INT <<FK>>
  * product_id : INT <<FK>>
  * qty : INT
  * price : INT
  * subtotal : INT
}

entity "payments" {
  * id : INT <<PK>>
  --
  * order_id : INT <<FK>>
  * method : VARCHAR
  proof : VARCHAR
  * status : ENUM
  paid_at : TIMESTAMP
}

entity "reviews" {
  * id : INT <<PK>>
  --
  * product_id : INT <<FK>>
  * buyer_id : INT <<FK>>
  * rating : TINYINT
  comment : TEXT
  seller_reply : TEXT
  photo : VARCHAR
  created_at : TIMESTAMP
}

entity "notifications" {
  * id : INT <<PK>>
  --
  * user_id : INT <<FK>>
  * message : TEXT
  * is_read : TINYINT
  created_at : TIMESTAMP
}

entity "system_logs" {
  * id : INT <<PK>>
  --
  * activity : TEXT
  created_at : TIMESTAMP
}

entity "system_settings" {
  * key : VARCHAR <<PK>>
  --
  * value : TEXT
}

users ||--o{ seller_verifications : "seller_id (FK)"
users ||--o{ seller_verifications : "approved_by (FK)"
users ||--o{ products : "seller_id (FK)"
categories ||--o{ products : "category_id (FK)"
users ||--o{ wishlists : "buyer_id (FK)"
products ||--o{ wishlists : "product_id (FK)"
users ||--o{ carts : "buyer_id (FK)"
products ||--o{ carts : "product_id (FK)"
users ||--o{ shipping_addresses : "buyer_id (FK)"
users ||--o{ orders : "buyer_id (FK)"
shipping_addresses ||--o{ orders : "shipping_address_id (FK)"
orders ||--o{ order_items : "order_id (FK)"
products ||--o{ order_items : "product_id (FK)"
orders ||--|| payments : "order_id (FK)"
products ||--o{ reviews : "product_id (FK)"
users ||--o{ reviews : "buyer_id (FK)"
users ||--o{ notifications : "user_id (FK)"

@enduml